# lsml_2_project

./: .env.example  .gitignore  CometModel  Dockerfile  Dockerfile.back  Dockerfile.front  LICENSE  README.md  backend.md  build_image_back.sh  build_image_front.sh  docker-compose.local.yml  docker-compose.yml  pyproject.toml  readme.frontend.md  readme.md  run_image_back.sh  run_image_front.sh  train.ipynb
app/: __init__.py  comet.py  main.py  model.py  train.py  train_tmp.py
docs/: compose.local.md  compose.md  env_file.md  frontend.md  notes.md  project.md
lsml_core/: __init__.py
train/: main.py  train.ipynb  train.py
utils/: __init__.py  dataset.py
web-app/: index.html  script.js  style.css
