[tool.poetry]
name = "super-model"
version = "1.0.0"
description = ""
authors = ["Evgeny Bagirov <evgeny.bagirov@myobligo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
nltk = "^3.9.1"
transformers = "^4.47.0"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
